--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=0">
-  <meta name="author" content="Andy Leong">
+  <meta name="author" content="Zhengxiu Jin">
   <meta name="language" content="english">
   <meta name="distribution" content="global">
   <meta name="description" content="With over 7 years of experience in frontend and backend development, I have held various positions as a freelancer, managing partner, and employee. I specialize in clean, modern, visually appealing frontend and backend development, but my core focuses are also usability and functionality. All my works are in step with modern technology. My fields of expertise: * Frontend web development - Angular, React, Vue * Backend web development - Python, Node express, * Fullstack web development - MERN, MEAN, Vue+Laravel, Django + React I worked with numerous clients from all around the world from early startups to well-established companies. I always seek new opportunities for cooperation on projects around interesting dashboards or landing pages.">
 
   <meta name="twitter:widgets:csp" content="on">
-  <meta name="keywords" content="Andy Leong, Full-stack developer, Web developer, Front-end developer, Back-end developer, Senior Developer">
+  <meta name="keywords" content="Zhengxiu Jin, Full-stack developer, Web developer, Front-end developer, Back-end developer, Senior Developer">
   <meta name="robots" content="index, follow">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="img/andy-leong.png">
-  <meta property="og:image" content="img/andy-leong.png">
-  <meta property="og:site_name" content="Andy Leong">
-  <meta property="og:title" content="Andy Leong">
+  <meta name="twitter:image" content="img/Zhengxiu-Jin.jpeg">
+  <meta property="og:image" content="img/Zhengxiu-Jin.jpeg">
+  <meta property="og:site_name" content="Zhengxiu Jin">
+  <meta property="og:title" content="Zhengxiu Jin">
 
-  <title>Andy Leong</title>
+  <title>Zhengxiu Jin</title>
 
   <!-- CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -37,26 +37,26 @@
     <header id="header" class="header">
       <div class="container-fluid">
         <div class="brand">
-          <a href="#About" class="brand-name" style=""><img src="img/andy-leong.png" style="width: 45px;vertical-align: unset;margin-left: 12px;"></a>
-          <a href="Andy-Leong-CV.pdf" download="Andy-Leong-CV.pdf" class="btn btn-dark" style="position: absolute; left: 100px; top: -8px;">Resume</a>
+          <a href="#About" class="brand-name" style=""><img src="img/Zhengxiu-Jin.jpeg" style="width: 100px;vertical-align: unset;margin-left: 12px;"></a>
+          <!-- <a href="Andy-Leong-CV.pdf" download="Andy-Leong-CV.pdf" class="btn btn-dark" style="position: absolute; left: 100px; top: -8px;">Resume</a> -->
         </div>
 
-        <button class="nav-toggle-btn a-nav-toggle">
+        <!-- <button class="nav-toggle-btn a-nav-toggle">
           <span class="hamburger">
             <span class="top-bun"></span>
             <span class="meat"></span>
             <span class="bottom-bun"></span>
           </span>
-        </button>
+        </button> -->
 
-        <div class="hide-menu a-nav-toggle"></div>
+        <!-- <div class="hide-menu a-nav-toggle"></div> -->
 
         <div class="menu">
           <div class="menu-lang">
             <a href="#" class="menu-lang-item active">Eng.</a>
           </div>
 
-          <div class="menu-main" id="accordion">
+          <!-- <div class="menu-main" id="accordion">
             <ul id="menuMain">
               <li data-menuanchor="About" class="active"><a href="#About">About</a></li>
               <li data-menuanchor="Services"><a href="#Services">Services</a></li>
@@ -67,12 +67,12 @@
               <li data-menuanchor="Clients"><a href="#Clients">Clients</a></li>
               <li data-menuanchor="Contact"><a href="#Contact">Contact</a></li>
             </ul>
-          </div>
+          </div> -->
 
           <div class="menu-footer">
             <div class="menu-footer-contacts">
               <!-- <div class="menu-footer-phone"><a href="tel:+121553554427" class="phone-link">(+1) 215 5355 4427</a></div> -->
-              <div class="menu-footer-mail"><a href="andyleong.up@gmail.com" class="mail-link">andyleong.up@gmail.com</a>
+              <div class="menu-footer-mail"><a href="godottokl@gmail.com" class="mail-link">godottokl@gmail.com</a>
               </div>
             </div>
           </div>
@@ -144,14 +144,17 @@
             </div>
             <div class="container">
               <div class="row justify-content-center text-center">
-                <div class="col-lg-8">
+                <div class="col-lg-8" style="position: relative;">
                   <div class="animate-element delay5 fadeInUp">
                     <div class="title-mini text-primary">About me</div>
-                    <h1 class="slide-title font-custom">Hello, I’m <span class="text-typed a-typed a-typed-about"
-                        data-text="Andy Leong"></span><br /> I’m a full-stack web developer.</h1>
+                    <h1 class="slide-title font-custom">Hello, I’m <b style="color: red;">Zhengxiu Jin</b> </br> I’m a full-stack web developer.</h1>
                   </div>
-                  <div class="slide-descr animate-element delay7 fadeInUp">I will help you <strong>build your
-                      website</strong> and <strong>grow your business</strong>. I create engaging websites and ongoing marketing support.</div>
+                  <div class="slide-descr animate-element delay7 fadeInUp" style="font-weight: bold; color: yellow; font-size: large;">
+                    <!-- I will help you <strong>build your website</strong> and <strong>grow your business</strong>. I create engaging websites and ongoing marketing support. -->
+                    This is to confirm my affiliation with the website.
+                  </br>
+                    This site is owned and operated by Zhengxiu Jin.
+                  </div>
                   <div class="slide-photo slide-photo-about">
                     <div class="rounded-text">
                       <svg viewBox="0 0 200 200">
@@ -168,12 +171,25 @@
                     <div class="inside"><img src="img/slide1.png" alt="" /></div>
                   </div>
                 </div>
+                <div class="row align-items-center text-center contacts animate-element delay11 fadeInUp" style="position: absolute; bottom: 10px;">
+                  <div class="col-md-4">
+                    <div class="contact-item contact-item-phone"><a href="tel:+86 13332175053" class="phone-link" style="color: yellow;">+86 13332175053</a></div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="contact-item">
+                      <a href="mailto:godottokl@gmail.com" class="mail-link" style="color: yellow;">godottokl@gmail.com</a>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="contact-item" style="color: yellow;">No 27, Liuhe Street, Zhenxing District, Dandong, 118000, China</div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="section pp-scrollable slide slide-services slide-dark slide-services a-slide-typed"
+        <!-- <div class="section pp-scrollable slide slide-services slide-dark slide-services a-slide-typed"
           data-name="services">
           <div class="slide-container">
             <div class="lines">
@@ -233,9 +249,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="section pp-scrollable slide slide-skills a-slide-typed" data-name="skills">
+        <!-- <div class="section pp-scrollable slide slide-skills a-slide-typed" data-name="skills">
           <div class="slide-container">
             <div class="lines">
               <div></div>
@@ -385,9 +401,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="section pp-scrollable slide slide-resume slide-dark">
+        <!-- <div class="section pp-scrollable slide slide-resume slide-dark">
           <div class="slide-container">
             <div class="lines">
               <div></div>
@@ -450,9 +466,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="section pp-scrollable slide slide-portfolio a-slide-typed" data-name="portfolio">
+        <!-- <div class="section pp-scrollable slide slide-portfolio a-slide-typed" data-name="portfolio">
           <div class="slide-container">
             <div class="lines">
               <div></div>
@@ -698,9 +714,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="section pp-scrollable slide slide-testimonials">
+        <!-- <div class="section pp-scrollable slide slide-testimonials">
           <div class="slide-container">
             <div class="lines">
               <div></div>
@@ -838,9 +854,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="section pp-scrollable slide slide-clients slide-dark">
+        <!-- <div class="section pp-scrollable slide slide-clients slide-dark">
           <div class="slide-container">
             <div class="lines">
               <div></div>
@@ -925,9 +941,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="section pp-scrollable slide slide-contacts a-slide-typed" data-name="contacts">
+        <!-- <div class="section pp-scrollable slide slide-contacts a-slide-typed" data-name="contacts">
           <div class="slide-container">
             <div class="lines">
               <div></div>
@@ -956,19 +972,19 @@
               </div>
               <div class="row align-items-center text-center contacts animate-element delay11 fadeInUp">
                 <div class="col-md-4">
-                  <div class="contact-item contact-item-phone"><a href="tel:+13037313397" class="phone-link">(+1) 303 731 3397</a></div>
+                  <div class="contact-item contact-item-phone"><a href="tel:+86 13332175053" class="phone-link">+86 13332175053</a></div>
                 </div>
                 <div class="col-md-4">
-                  <div class="contact-item"><a href="mailto:andyleong.up@gmail.com"
-                      class="mail-link">andyleong.up@gmail.com</a></div>
+                  <div class="contact-item"><a href="mailto:godottokl@gmail.com"
+                      class="mail-link">godottokl@gmail.com</a></div>
                 </div>
                 <div class="col-md-4">
-                  <div class="contact-item">Aurora, CO, U.S</div>
+                  <div class="contact-item">No 27, Liuhe Street, Zhenxing District, Dandong, 118000, China</div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -977,19 +993,28 @@
       <div class="container-fluid">
         <div class="footer-social">
           <ul class="social">
-            <li><a 
-              target="_blank" href="https://www.linkedin.com/in/leongal"><i class="icon-linkedin"></i></a></li>
-            <li><a 
-              target="_blank" href="https://www.behance.net/leongal/"><i class="icon-behance"></i></a></li>
-            <li><a 
-              target="_blank" href="https://github.com/leongal"><i class="icon-github"></i></a></li>
+            <!-- <li>
+              <a target="_blank" href="https://www.linkedin.com/in/dev1ninja">
+                <i class="icon-linkedin"></i>
+              </a>
+            </li> -->
+            <!-- <li>
+              <a target="_blank" href="https://www.behance.net/dev1ninja/">
+                <i class="icon-behance"></i>
+              </a>
+            </li> -->
+            <li>
+              <a target="_blank" href="https://github.com/dev1ninja">
+                <i class="icon-github"></i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
     </footer>
 
 
-    <div class="progress-nav">
+    <!-- <div class="progress-nav">
       <ul id="menu">
         <li data-menuanchor="About" class="active"></li>
         <li data-menuanchor="Services"></li>
@@ -1000,7 +1025,7 @@
         <li data-menuanchor="Clients"></li>
         <li data-menuanchor="Contact"></li>
       </ul>
-    </div>
+    </div> -->
 
 
   </div>
