--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header id="header" class="header">
       <div class="container-fluid">
         <div class="brand">
-          <a href="#About" class="brand-name" style=""><img src="img/Zhengxiu-Jin.jpeg" style="width: 100px;vertical-align: unset;margin-left: 12px;"></a>
+          <a href="#About" class="brand-name" style=""><img src="img/Zhengxiu-Jin.png" style="width: 100px;vertical-align: unset;margin-left: 12px;"></a>
           <!-- <a href="Andy-Leong-CV.pdf" download="Andy-Leong-CV.pdf" class="btn btn-dark" style="position: absolute; left: 100px; top: -8px;">Resume</a> -->
         </div>
 
@@ -170,18 +170,18 @@
                     </div>
                     <div class="inside"><img src="img/slide1.png" alt="" /></div>
                   </div>
-                </div>
-                <div class="row align-items-center text-center contacts animate-element delay11 fadeInUp" style="position: absolute; bottom: 10px;">
-                  <div class="col-md-4">
-                    <div class="contact-item contact-item-phone"><a href="tel:+86 13332175053" class="phone-link" style="color: yellow;">+86 13332175053</a></div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="contact-item">
-                      <a href="mailto:godottokl@gmail.com" class="mail-link" style="color: yellow;">godottokl@gmail.com</a>
+                  <div class="row align-items-center text-center contacts animate-element delay11 fadeInUp" style="position: absolute; bottom: 10px;">
+                    <div class="col-md-4">
+                      <div class="contact-item contact-item-phone"><a href="tel:+86 13332175053" class="phone-link" style="color: yellow;">+86 13332175053</a></div>
                     </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="contact-item" style="color: yellow;">No 27, Liuhe Street, Zhenxing District, Dandong, 118000, China</div>
+                    <div class="col-md-4">
+                      <div class="contact-item">
+                        <a href="mailto:godottokl@gmail.com" class="mail-link" style="color: yellow;">godottokl@gmail.com</a>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="contact-item" style="color: yellow;">No 27, Liuhe Street, Zhenxing District, Dandong, 118000, China</div>
+                    </div>
                   </div>
                 </div>
               </div>
